--- a/index.html
+++ b/index.html
@@ -74,12 +74,7 @@
                     </div>
                     <div data-effect-4>
                         <p class="title">
-                            Исследовательское агентство ZimaBlue верит только в исследования.
-                        </p>
-                        <p class="title">
-                            Наша миссия заключается в&nbsp;поисках истинных причин. Даже когда у&nbsp;нас есть
-                            гениальные гипотезы (а&nbsp;мы&nbsp;все свои гипотезы считаем гениальными), мы&nbsp;всегда
-                            их&nbsp;проверяем.
+                            Наша миссия заключается в&nbsp;поисках истинных причин. Даже когда у&nbsp;нас есть гениальные гипотезы (а&nbsp;мы&nbsp;все свои гипотезы считаем гениальными), мы&nbsp;всегда их&nbsp;проверяем.
                         </p>
                     </div>
                 </div>
@@ -142,7 +137,7 @@
                             Sensitivity to&nbsp;pricing
                         </p>
                         <p class="subtitle2">
-
+                            Поиск, сбор и&nbsp;анализ информации, которая обеспечивает потребности маркетинга компании
                         </p>
                         <a href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
                             target="_blank"></a>
@@ -255,7 +250,7 @@
                 </div>
             </div>
             <div class="columns">
-                <div class="column"></div>
+                <div class="column is-hidden-mobile"></div>
                 <div class="column">
                     <div
                         class="cards-service is-clickable is-flex is-flex-direction-column is-justify-content-space-between">
@@ -634,7 +629,7 @@
     $(document).ready(() => {
         $('section.hero').jGravity({
             target: 'span',
-            weight: 5,
+            weight: 8,
             depth: 1,
             drag: true,
             interval: 400
