--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <section class="hero is-white is-fullheight" id="#">
         <div class="hero-head">
             <nav class="navbar">
@@ -88,6 +89,78 @@
                 <p>Наши услуги</p>
             </div>
             <div class="columns">
+
+                <div class="card">
+                    <div class="card-inner">
+                      <div class="card-front">
+                        Содержимое лицевой стороны карточки
+                      </div>
+                      <div class="card-back">
+                        Содержимое обратной стороны карточки
+                      </div>
+                    </div>
+                    <button class="flip-icon">↻</button>
+                  </div>
+<style>
+    /* Общие стили для карточек */
+.card {
+  position: relative;
+  width: 300px;
+  height: 200px;
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Стили для лицевой и обратной стороны карточки */
+.card-front, .card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-front {
+  background: #fff;
+}
+
+.card-back {
+  background: #eee;
+  transform: rotateY(180deg);
+}
+
+/* Hover эффект для не-touch устройств */
+@media (hover: hover) and (pointer: fine) {
+  .card:hover .card-inner {
+    transform: rotateY(180deg);
+  }
+
+  .flip-icon {
+    display: none;
+  }
+}
+
+/* Стили для touch устройств */
+@media (hover: none) and (pointer: coarse) {
+  .flip-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+  }
+}
+
+</style>
+                  
                 <div class="column">
                     <div
                         class="cards-service is-clickable is-flex is-flex-direction-column is-justify-content-space-between">
@@ -105,6 +178,7 @@
                         <a href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
                             target="_blank"></a>
                         <p class="cta">Заказать исследование</p>
+                        <button class="delete" aria-label="close"></button>
                     </div>
                 </div>
                 <div class="column">
@@ -675,4 +749,13 @@
 
 </script>
 
+<script>
+    document.querySelectorAll('.flip-icon').forEach(icon => {
+  icon.addEventListener('click', function() {
+    const cardInner = this.previousElementSibling;
+    cardInner.style.transform = cardInner.style.transform === 'rotateY(180deg)' ? '' : 'rotateY(180deg)';
+  });
+});
+
+</script>
 </html>
