--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                         <a class="navbar-item" href="#">
                             <img src="src/img/zimablue.svg" alt="Logo" />
                         </a>
-                        <span class="navbar-burger" data-target="navbarMenuHeroB">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
+                        <span class="navbar-burger ignoreMe" data-target="navbarMenuHeroB">
+                            <span class="ignoreMe"></span>
+                            <span class="ignoreMe"></span>
+                            <span class="ignoreMe"></span>
+                            <span class="ignoreMe"></span>
                         </span>
                     </div>
                     <div id="navbarMenuHeroB" class="navbar-menu">
@@ -189,7 +189,11 @@
                         <img src="src/img/icons/icon-arrow-left.svg">
                         <p>Наши преимущества</p>
                     </div>
-                    <p class="has-text-black is-black is-size-3">
+                    <p class="has-text-black is-black is-size-3 is-hidden-mobile">
+                        Мы&nbsp;разработали курс по&nbsp;исследованиям для университетов и&nbsp;онлайн-платформ
+                        с&nbsp;применением <i>уникального алгоритма</i> обработки данных.
+                    </p>
+                    <p class="has-text-black is-black is-size-4 is-hidden-tablet">
                         Мы&nbsp;разработали курс по&nbsp;исследованиям для университетов и&nbsp;онлайн-платформ
                         с&nbsp;применением <i>уникального алгоритма</i> обработки данных.
                     </p>
