--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                                     текущих
                                     и&nbsp;потенциальных клиентов
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
-                                    target="_blank">Заказать исследование</button>
+                                    target="_blank">Заказать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -138,9 +138,9 @@
                                     Анализ данных, полученных с&nbsp;помощью большого количества опрошенных респондентов
                                     в&nbsp;ходе опроса или анкетирования
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
-                                    target="_blank">Заказать исследование</button>
+                                    target="_blank">Заказать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -168,9 +168,9 @@
                                     Поиск, сбор и&nbsp;анализ информации, которая обеспечивает потребности маркетинга
                                     компании
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://t.me/FarangizaShukasheva?start=Здравствуйте, хочу заказать исследование"
-                                    target="_blank">Заказать исследование</button>
+                                    target="_blank">Заказать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -256,9 +256,9 @@
                                     о&nbsp;предпочтениях
                                     казахстанцев
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1IMOwVtlZxT2k97EwSGhIp5JKKlstMzDi/view"
-                                    target="_blank">Скачать исследование</button>
+                                    target="_blank">Скачать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -283,9 +283,9 @@
                                     направлениям&nbsp;&mdash; тут самые популярные бренды от&nbsp;спортивной одежды
                                     до&nbsp;ноутбуков, от&nbsp;банков до&nbsp;блогеров
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1E1ZcD_n2uKBhiqBezTU05gEbQlNpXNJk/view"
-                                    target="_blank">Скачать исследование</button>
+                                    target="_blank">Скачать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -310,9 +310,9 @@
                                     и&nbsp;какая
                                     возрастная категория считает гендерное равенство важной проблемой для бизнеса
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1KTiYfIITLTVd-niElvJmANgxosF56pCT/view"
-                                    target="_blank">Скачать исследование</button>
+                                    target="_blank">Скачать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -338,9 +338,9 @@
                                     В&nbsp;каких банках и&nbsp;на&nbsp;что казахстанцы берут кредиты? Какой процент
                                     от&nbsp;заработной платы занимает ежемесячный платеж?
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1XLH2M8siL9mjjlCgyAHlsvjm7ajfBpu5/view"
-                                    target="_blank">Скачать исследование</button>
+                                    target="_blank">Скачать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -364,9 +364,9 @@
                                     дети
                                     потребляют контент и&nbsp;почему они делают такой выбор?
                                 </p>
-                                <button class="button is-white is-outlined is-rounded"
+                                <a class="button is-white is-outlined is-rounded"
                                     href="https://drive.google.com/file/d/1kcNDinL1lr5RueZKKWmKS41pSVjuydLu/view"
-                                    target="_blank">Скачать исследование</button>
+                                    target="_blank">Скачать исследование</a>
                             </div>
                         </div>
                         <button class="flip-icon" onclick="toggleIcon(this)">
@@ -410,7 +410,7 @@
             <div class="columns">
                 <div class="column is-three-quarters">
                     <div class="tab-content active" id="tab1">
-                        <div class="flip-card cards-service">
+                        <div class="cards-service">
                             <div class="flip-card-inner">
                                 <div
                                     class="flip-card-front is-flex is-flex-direction-column is-justify-content-space-between">
@@ -424,16 +424,9 @@
                                         Директор по&nbsp;организационному развитию<br /> и&nbsp;работе с&nbsp;персоналом
                                     </p>
                                 </div>
-                                <div
-                                    class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between is-align-items-end">
-                                    <p class="title">
-                                    </p>
-                                    <button class="button is-white is-outlined is-rounded" data-target="modal-id-tele2"
-                                        class="open-modal-btn">Читать полностью</button>
-                                </div>
                             </div>
-                            <button class="flip-icon" onclick="toggleIcon(this)">
-                                <span class="icon ignoreMe"></span>
+                            <button class="open-modal-btn feedback" data-target="modal-id-tele2">
+                                <span class="icon ignoreMe">+</span>
                             </button>
                         </div>
                     </div>
@@ -456,8 +449,8 @@
                                 <div
                                     class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between is-align-items-end">
                                     <p class="subtitle2"></p>
-                                    <button class="button is-white is-outlined is-rounded" data-target="modal-id-almau"
-                                        class="open-modal-btn">Читать полностью</button>
+                                    <a class="button is-white is-outlined is-rounded" data-target="modal-id-almau"
+                                        class="open-modal-btn">Читать полностью</a>
                                 </div>
                             </div>
                             <button class="flip-icon" onclick="toggleIcon(this)">
@@ -484,8 +477,8 @@
                                 <div
                                     class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between is-align-items-end">
                                     <p class="subtitle2"></p>
-                                    <button class="button is-white is-outlined is-rounded"
-                                        data-target="modal-id-alphauz" class="open-modal-btn">Читать полностью</button>
+                                    <a class="button is-white is-outlined is-rounded"
+                                        data-target="modal-id-alphauz" class="open-modal-btn">Читать полностью</a>
                                 </div>
                             </div>
                             <button class="flip-icon" onclick="toggleIcon(this)">
@@ -512,8 +505,8 @@
                                 <div
                                     class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
                                     <p class="subtitle2"></p>
-                                    <button class="button is-white is-outlined is-rounded" data-target="modal-id-jusan"
-                                        class="open-modal-btn">Читать полностью</button>
+                                    <a class="button is-white is-outlined is-rounded" data-target="modal-id-jusan"
+                                        class="open-modal-btn">Читать полностью</a>
                                 </div>
                             </div>
                             <button class="flip-icon" onclick="toggleIcon(this)">
@@ -541,8 +534,8 @@
                                 <div
                                     class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
                                     <p class="subtitle2"></p>
-                                    <button class="button is-white is-outlined is-rounded" data-target="modal-id-fet"
-                                        class="open-modal-btn">Читать полностью</button>
+                                    <a class="button is-white is-outlined is-rounded" data-target="modal-id-fet"
+                                        class="open-modal-btn">Читать полностью</a>
                                 </div>
                             </div>
                             <button class="flip-icon" onclick="toggleIcon(this)">
@@ -568,8 +561,8 @@
                                 <div
                                     class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
                                     <p class="subtitle2"></p>
-                                    <button class="button is-white is-outlined is-rounded" data-target="modal-id-ac"
-                                        class="open-modal-btn">Читать полностью</button>
+                                    <a class="button is-white is-outlined is-rounded" data-target="modal-id-ac"
+                                        class="open-modal-btn">Читать полностью</a>
                                 </div>
                             </div>
                             <button class="flip-icon" onclick="toggleIcon(this)">
@@ -597,7 +590,7 @@
                                 <div
                                     class="flip-card-back is-flex is-flex-direction-column is-justify-content-space-between">
                                     <p class="subtitle2"></p>
-                                    <button class="button is-white is-outlined is-rounded" data-target="modal-id-bc"
+                                    <a class="button is-white is-outlined is-rounded" data-target="modal-id-bc"
                                         class="open-modal-btn">Читать полностью</button>
                                 </div>
                             </div>
