--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             </div>
         </div>
     </section>
-    <section class="section has-background-white is-medium pb-0" id="partners">
+    <section class="section has-background-white is-medium" id="partners">
         <div class="container">
             <div class="columns">
                 <div class="column is-four-fifths">
